# Quests

./: README.md
Arattai Trend Analytics/: ChatGPT.md  Claude.md  Gemini.md  Grok.md  Perplexity.md  arattai-analytics-report.tsx
H-1B 2025/: H-1B 2025 Approvals & Denials.twb  H-1B 2025 Approvals & Denials.twbx  H-1B Analysis.sql
H-1B Trend/: H-1B Trend Analysis.sql  H-1B Trending Approvals & Denials.twb
Time using words/: launch_html.bat  launch_widget.bat  launch_widget.ps1  time_using_words_req.txt  time_widget.html  time_widget_simple.html
Time using words/Testing/: .gitignore  QUICKSTART.md  README.md  app.js  build.bat  index.html  install_tkinter.bat  launch.bat  launch_python.bat  main.js  package.json  timeConverter.js  time_widget.py
Time using words/Testing/tauri/: README_TAURI.md  build_tauri.bat  launch_tauri.bat  package.json  setup_rust.bat
Time using words/Testing/tauri/src/: app.js  index.html  styles.css  timeConverter.js
Time using words/Testing/tauri/src-tauri/: Cargo.toml  tauri.conf.json
tango-master/services/: geminiService.ts
